Fix z-index so the menu appears on top of the Oxygen interface elements.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 	position: absolute;
 	left: 310px;
 	top: 0;
-	z-index: 1;
+	z-index: 1001;
 	background-color: #000;
 	color: rgba(255,255,255,0.7);
 	padding-top: 10px;
